--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
     </style>
 </head>
 <body>
+    <script type='text/javascript' src='//maintaintournamentslick.com/78/59/09/785909b8638e0f4ea3a1455bac7e2701.js'></script>
     <div class="page-wrapper">
         <!-- Top Ad Slot -->
         <div class="ad-container ad-top">
